Korrekturen von Alex eingepflegt

--- a/Documentation/Report/Parts/Kontexterkundung.tex
+++ b/Documentation/Report/Parts/Kontexterkundung.tex
@@ -4,7 +4,7 @@ Im Rahmen der oben beschriebenen Überlegungen wurde bereits angesprochen, dass 
 \subsection{Fragebogen}
 	Bei der Datenerhebung haben wir uns, wie in Abbildung \ref{fig:Questionnaire} zu sehen, für eine Umfrage mittels Fragebogen entschieden, da die App in vielen verschiedenen Kontexten eingesetzt werden soll und wir möglichst viele Meinungen einfließen lassen wollten. 
 	
-	Für unser Konzept wollten wir wissen, welche Funktionen besonders beliebt sind und aus welchen Gründen die Teilnehmer Befürchtungen bei der Nutzung von Banking-Apps haben. Außerdem war es uns ein Anliegen, nicht nur quantitative, sondern auch qualitative Daten zu erheben. Daher gab es Freitextfelder, in denen die Teilnehmer Ideen, Kritik und allgemeine Bedenken in Bezug auf Banking-Apps äußern konnten. Dieses half uns, die potentiellen Nutzer besser zu verstehen und Dinge aufzudecken, an die wir nicht gedacht hätten. An der Umfrage am Informatikum haben 92 Studenten teilgenommen. Hier folgen nun die wichtigsten Ergebnisse. 
+	Für unser Konzept wollten wir wissen, welche Funktionen besonders beliebt sind und welche Bedenken die Teilnehmer bei der Benutzung von Banking-Apps haben. Außerdem war es uns ein Anliegen, nicht nur quantitative, sondern auch qualitative Daten zu erheben. Daher gab es Freitextfelder, in denen die Teilnehmer Ideen, Kritik und allgemeine Bedenken in Bezug auf Banking-Apps äußern konnten. Dieses half uns, die potentiellen Nutzer besser zu verstehen und Dinge aufzudecken, an die wir nicht gedacht hätten. An der Umfrage am Informatikum haben 92 Studenten teilgenommen. Hier folgen nun die wichtigsten Ergebnisse. 
 	
 \begin{figure}
 	\centering
