--- a/Documentation/Report/Parts/Ergebnis.tex
+++ b/Documentation/Report/Parts/Ergebnis.tex
@@ -74,7 +74,7 @@ Das Dashboard ist die zentrale Anlaufstelle der Applikation; dort haben wir eine
 	\label{fig6}
 \end{figure}
 
-	Bei den Bescheinigungen sehen wir verschiedene von der Bank zur Verfügung gestellte Dokumente, die der Nutzer auswählen kann. Insbesondere sind beispielsweise sind Aktionen wie eine Kontoeröffnung möglich, für die man normalerweise am Schalter anstehen müsste.
+	Bei den Bescheinigungen sehen wir verschiedene von der Bank zur Verfügung gestellte Dokumente, die der Nutzer auswählen kann. Insbesondere beispielsweise sind Aktionen wie eine Kontoeröffnung möglich, für die man normalerweise am Schalter anstehen müsste.
 
 \subsubsection{Kontoauszüge}
 \begin{figure}[h]
@@ -94,7 +94,7 @@ Das Dashboard ist die zentrale Anlaufstelle der Applikation; dort haben wir eine
 	\label{fig8}
 \end{figure}
 
-	Im Umbuchungsbildschirm kann der Nutzer sowohl Ziel- als auch Quellkonto auswählen, zwischen denen der angegebene Betrag transferiert werden soll. Das ganze wird wird mit einem Button bestätigt. Insbesondere wird hier das klassische Sparbuch um eine komfortable Umbuchungsfunktionalität erweitert, ohne dass dessen filialgebundener Charakter verloren ginge.
+	Im Umbuchungsbildschirm kann der Nutzer sowohl Ziel- als auch Quellkonto auswählen, zwischen denen der angegebene Betrag transferiert werden soll. Das Ganze wird mit einem Button bestätigt. Insbesondere wird hier das klassische Sparbuch um eine komfortable Umbuchungsfunktionalität erweitert, ohne dass dessen filialgebundener Charakter verloren ginge.
 
 \subsubsection{Finanzierungsrechner}
 \begin{figure}[h]
@@ -132,9 +132,9 @@ Das Dashboard ist die zentrale Anlaufstelle der Applikation; dort haben wir eine
 	\caption{Eigenkreationen für das Design\label{fig11}}
 \end{figure}
 
-Um unserer Applikation in mancher Hinsicht besser auf unsere Bedürfnisse anzupassen, haben wir uns bei einigen Designelementen über die Standardimplementierungen von Apple hinweggesetzt. Dennoch blieben die iOS 7 Richtlinien ein Qualitätsmaßstab für uns.
+Um unsere Applikation in mancher Hinsicht besser auf unsere Bedürfnisse anzupassen, haben wir bei einigen Designelementen die Standardimplementierungen von Apple ergänzt. Dennoch blieben die iOS 7 Richtlinien ein Qualitätsmaßstab für uns.
 
-Wie in (A) zu sehen ist, bekam unser Schieberegler als kleine Erweiterung eine schwarze Sprechblase, welche den aktuellen Wert anzeigt. Dies ist unter anderem für die Bedienbarkeit implementiert worden, damit man beim Verschieben des Regler nicht immer auf die linke Seite schauen muss um den aktuellen Wert abzulesen.
+Wie in (A) zu sehen ist, bekam unser Schieberegler als kleine Erweiterung eine schwarze Sprechblase, welche den aktuellen Wert anzeigt. Dies ist im Speziellen unter dem Gesichtspunkt der Bedienbarkeit implementiert worden, damit man beim Verschieben des Regler nicht immer auf die linke Seite schauen muss um den aktuellen Wert abzulesen.
 
 Die mitgegebenen Textfelder von Apple haben in der Regel immer einen Text, welcher dem Nutzer einen Hinweis gibt, was für ein Inhalt erwartet wird. Diese Umsetzung sieht oftmals unschön aus und nimmt viel Platz ein. Mit unserer Implementierung (B) verliert das Textfeld keine Funktionalität, ist aber schlanker.
 
@@ -152,8 +152,8 @@ Die Standard Pop-Over lassen sich nur bedingt anpassen. So konnten wir die Farbe
 %
 %Wir als Entwickler konnten natürlich die Bank in ihrem Wesen nicht verändern, die Einführung von neuer Hardware mit der Self-Service Station war schon das Maximum an Veränderung die wir Einfordern konnten.
 
-	Eine Herausforderung geht auch immer mit einer neuen Programmiersprache und deren Entwicklungsumgebung einher. Die ersten Wochen hatten wir somit erwartungsgemäß etwas geringere Produktivität, weil wir uns auf diese Gegebenheiten erst einstellen mussten. Je weiter jedoch das Projekt voranschritt, desto sicherer fühlten wir uns in Objective-C und im Umgang mit X-Code.
+	Mit einer neu zu erlernenden Programmiersprache und deren Entwicklungsumgebung geht auch immer eine Herausforderung einher. Die ersten Wochen hatten wir somit erwartungsgemäß etwas geringere Produktivität, weil wir uns auf diese Gegebenheiten erst einstellen mussten. Je weiter jedoch das Projekt voranschritt, desto sicherer fühlten wir uns in Objective-C und im Umgang mit Xcode.
 
-	Während der Entwicklung stießen wir auch immer wieder auf Einschränkungen seitens Apple bezüglich der Standard GUI-Elemente. So konnten wir beispielsweise die Tint-Color eines Buttons im Pop-Over nicht ändern. Apple lässt es nicht zu. So mussten wir unser eigenes Pop-Over implementieren.
+	Während der Entwicklung stießen wir auch immer wieder auf Einschränkungen seitens Apple bezüglich der Standard GUI-Elemente. So konnten wir beispielsweise die Tint-Color eines Buttons im Pop-Over nicht ändern. Apple lässt dies nicht zu. Daher mussten wir hier unser eigenes Pop-Over implementieren.
 
 	Nichtsdestotrotz konnten wir mit Unterstützung der Betreuer alle größeren und kleineren Herausforderungen bewältigen und hatten nie das Gefühl, vor einem unüberwindbaren Problem zu stehen.
