Bericht: Markus' Part ergänzt (5,5 S)

--- a/Documentation/Report/Listings/Bootstrapping.tex
+++ b/Documentation/Report/Listings/Bootstrapping.tex
@@ -1,4 +1,9 @@
+/**
+ * Bootstrapping der App-Abhängigkeiten.
+ * `mode` ist entweder "dev", "prod" oder "test".
+ */
 + (void)initDependencyInjectorWithMode:(NSString *)mode {
+	// Lokale Variablen, die zu Protokollen typisiert sind
 	id<KBABranchDao> branchDao;
 	id<KBAExchangeRateDao> exchangeRateDao;
 	id<KBACustomerDao> customerDao;
@@ -6,29 +11,31 @@
 	id<KBATransactionDao> transDao;
 	id<KBACreditRatingDao> creditDao;
 	id<KBAMessageDao> messageDao;
-	KBAAuth *auth = [KBAAuth new];
-	
-	exchangeRateDao = [KBAExchangeRateDaoRest new];
     
     if ([mode isEqualToString:@"dev"]) { 
-		// if development / click dummy
-		branchDao = [KBABranchDaoDummy new];
+		// Dummy-Abhängigkeiten zum Testen und zur Entwicklung
+		branchDao   = [KBABranchDaoDummy new];
 		customerDao = [KBACustomerDaoDummy new];
-		accountDAo = [KBAAccountDaoDummy new];
-		transDao = [KBATransactionDaoDummy new];
-		creditDao = [KBACreditRatingDaoDummy new];
-		messageDao = [KBAMessageDaoDummy new];
+		accountDAo  = [KBAAccountDaoDummy new];
+		transDao    = [KBATransactionDaoDummy new];
+		creditDao   = [KBACreditRatingDaoDummy new];
+		messageDao  = [KBAMessageDaoDummy new];
     }
     else {
-		// for production
-		creditDao = [KBACreditRatingDaoRest new];
-		branchDao = [KBABranchDaoRest new];
+		// Konkrete Abhängigkeiten für die produktive Anwendung
+		creditDao   = [KBACreditRatingDaoRest new];
+		branchDao   = [KBABranchDaoRest new];
 		customerDao = [KBACustomerDaoRest new];
-		accountDAo = [KBAAccountDaoRest new];
-		transDao = [KBATransactionDaoRest new];
-		messageDao = [KBAMessageDaoRest new];
+		accountDAo  = [KBAAccountDaoRest new];
+		transDao    = [KBATransactionDaoRest new];
+		messageDao  = [KBAMessageDaoRest new];
 	}
+	
+	// Eine Ausnahme: Der Währungskurs-DAO wurde von uns konkret
+	// mit Daten der EZB implementiert.
+	exchangeRateDao = [KBAExchangeRateDaoRest new];
     
+    // Speichern der Abhängigkeiten im Dependency Injector
     [KBADependencyInjector setObject:branchDao withKey:@"branchDao"];
     [KBADependencyInjector setObject:exchangeRateDao withKey:@"rateDao"];
     [KBADependencyInjector setObject:customerDao withKey:@"customerDao"];
@@ -36,7 +43,5 @@
     [KBADependencyInjector setObject:auth withKey:@"auth"];
     [KBADependencyInjector setObject:transDao withKey:@"transDao"];
     [KBADependencyInjector setObject:creditDao withKey:@"creditDao"];
-    [KBADependencyInjector setObject:messageDao withKey:@"messageDao"];
-    [auth login: @"max" withPassword:@"test"];
-    
-} // end of initDependencyInjectorWithMode:
+    [KBADependencyInjector setObject:messageDao withKey:@"messageDao"];   
+}
