--- a/Documentation/Report/Parts/Architektur.tex
+++ b/Documentation/Report/Parts/Architektur.tex
@@ -24,9 +24,11 @@
 %
 	Ein wichtiger Aspekt, insbesondere im Hinblick auf den Umgang mit sensiblen Finanzdaten, ist die Sicherheit der App. Dabei ist es auch eine Aufgabe der Architektur, diese gewährleisten zu können. Im Folgenden erläutern wir die Schlüsse, die wir dementsprechend für die realistische Umsetzung zogen.
 	
-	Eine Fragestellung von essentieller Bedeutung für uns ist, was mit der App im Falle eines Diebstahls passieren würde. Da wir sowohl der Bank als auch dem Kunden gewährleisten müssen, dass ihre Daten sicher sind, haben wir das Risiko zu groß eingestuft, die Daten auf dem Gerät zu speichern. Deswegen liegen alle Informationen nur im Zwischenspeicher. Das hat für uns den Vorteil, dass beim Beenden der App alle Informationen verloren gehen, wenn der Kunde nicht mehr eingeloggt ist.
+	Eine Fragestellung von essentieller Bedeutung für uns ist, was mit der App im Falle eines Diebstahls passieren würde. Da wir sowohl der Bank als auch dem Kunden gewährleisten müssen, dass ihre Daten sicher sind, haben wir das Risiko zu groß eingestuft, die Daten auf dem Gerät zu speichern. Das ist der Grund, weswegen alle Informationen nur im Zwischenspeicher des iPads liegen. Das hat für uns den Vorteil, dass beim Beenden der App alle Informationen verloren gehen, wenn der Kunde nicht mehr eingeloggt ist.
 	
-	Zudem würde in einer über einen Dummy hinausgehenden Implementierung ein Time-Out Token implementiert, welche nach beispielsweise zehn Minuten ohne Interaktion die Anwendung beendete. Außerdem gewährleistet der Authentifizierungsmechanismus, dass kritische Features serverseitig deaktiviert werden, indem der entsprechende Benutzer wieder auf nicht authentifiziert geschaltet wird. Dieser Mechanismus kann einerseits bei einer Verlustmeldung greifen, aber auch bei in irgendeiner Weise verdächtigem Verhalten, also ungewöhnlich viele oder große Transaktionen in bestimmten Zeiträumen.
+	Dass dies für den Kunden nachteilig wirkt, da er die Daten nicht umgehend zur Verfügung hat, ist unser meiner nach ein vernachlässigbarer Faktor. Wie oben bereits geschildert, stellen wir uns die Benutzung der App eher in ruhigen Bereichen vor, in denen in den meisten Fällen eine Internetverbindung existiert. Für den Self-Service gehen wir davon aus, dass die Bank ihren Kunden in der Filiale eine Internetverbindung zur Verfügung stellt. Sowieso sollte es eher im Interesse des Kunden sein, wichtige Finanzinformationen nur an Orten abzurufen, wo sie nicht vielen Menschen einsehbar sind.
+	
+	Zudem würde in einer über einen Dummy hinausgehenden Implementierung ein Time-Out-Token (ähnlich einem Cookie im Web-Umfeld) implementiert, welche nach beispielsweise zehn Minuten ohne Interaktion die Anwendung beendete. Außerdem gewährleistet der Authentifizierungsmechanismus, dass kritische Features serverseitig deaktiviert werden, indem der entsprechende Benutzer wieder auf nicht authentifiziert geschaltet wird. Dieser Mechanismus kann einerseits bei einer Verlustmeldung greifen, aber auch bei in irgendeiner Weise verdächtigem Verhalten, also ungewöhnlich viele oder große Transaktionen in bestimmten Zeiträumen.
 	
 	Wichtig ist außerdem, dass alle Daten direkt übertragen werden. Wir stellen uns ein direktes Protokoll wie eine \acs{REST}-Schnittstelle oder ein \acs{SOAP}-Verfahren zum Austausch der Informationen zwischen App und Server der Bank vor.
 	
@@ -45,13 +47,15 @@
 	\caption{Klassendiagramm unserer Dependency Injection\label{fig:UmlDi}}
 \end{figure}
 	
-	Daher ist für uns Dependency Injection als Entwicklungsmuster die Lösung dieses Problems. Wir haben es in einer reduzierten Form selbst versucht zu implementieren. Dabei wird an einer zentralen Stelle im Quelltext, nämlich im \emph{Bootstrapping}, in den \texttt{KBADependencyInjector} wie in Abbildung \ref{fig:UmlDi} sichtbar registriert, welche konkrete Implementierung einer Abhängigkeit in der Anwendung verwendet werden soll. Beim \texttt{KBADependencyInjector} handelt es sich dabei nur um einen einfachen Schlüssel-Wert-Speicher. Der Bootstrapping-Prozess ist im Programmausdruck \ref{lst:Bootstrapping} wiedergegeben.
+	Daher ist für uns Dependency Injection als Entwicklungsmuster die Lösung dieses Problems. Wir haben es in einer reduzierten Form selbst implementiert. Dabei wird an einer zentralen Stelle im Quelltext, nämlich im \emph{Bootstrapping}, in den \lstinline{KBADependencyInjector} wie in Abbildung \ref{fig:UmlDi} sichtbar registriert, welche konkrete Implementierung einer Abhängigkeit in der Anwendung verwendet werden soll. Beim \lstinline{KBADependencyInjector} handelt es sich dabei nur um einen einfachen Schlüssel-Wert-Speicher.
 	
+	Der Bootstrapping-Prozess unserer App ist im Programmausdruck \ref{lst:Bootstrapping} wiedergegeben. Er zeigt an, wie zunächst lokale Variablen zu den generalisierten Protokollen typisiert sind, dann allerdings in einer bedingten Verzweigung entweder mit einer Dummy- oder einer konkreten Implementierung instantiiert werden. Abschließend werden die instantiierten Abhängigkeiten in den \lstinline{KBADependencyInjector} geschrieben. Beispielsweise wird für das Filial-\ac{DAO} eine lokale Variable des Typs \lstinline{id<KBABranchDao>} eingeführt, die im Entwicklungsmodus mit der Dummy-Implementierung \lstinline{KBABranchDaoDummy} und produktiv mit dem \lstinline{KBABranchDaoRest} instantiiert wird. Danach wird sie registriert.
+	\pagebreak
 	\lstinputlisting[label={lst:Bootstrapping}, caption={Der Bootstrapping-Vorgang}]{Listings/Bootstrapping}
 	
-\noindent	Wie zu erkennen ist, besitzt jedes \ac{DAO} ein Protocol, welches auf zwei Arten instanziiert werden kann. Dadurch erreichen wir, dass ein Programm auf verschiedene Art und Weise ausführbar ist.
+\noindent	Wie zu erkennen ist, besitzt jedes \ac{DAO} ein Protocol, welches auf zwei Arten instanziiert werden kann. Dadurch erreichen wir, dass ein Programm auf verschiedene Art und Weise ausführbar ist. Die zentrale Registrierung der Abhängigkeiten hat außerdem den Vorzug, dass für eine andere Bank, die über eine andere Schnittstelle als (in diesem Fall) \ac{REST} verfügt, eine andere konkrete Implementierung nötig werden kann, die recht simpel nur an dieser Stelle im Code eingefügt werden muss. Man muss sich keine Gedanken mehr über weitere Abschnitte des Quelltext bei so einer Änderung machen.
 	
-	Ein weiterer Vorteil dieser Abstraktion ist die Testbarkeit der App. Dadurch, dass im Click-Dummy feste Daten hinterlegt sind, kann man sich zum Testen der App verschiedene Fälle erzeugen, die einfach in den jeweiligen \texttt{DummyDao}s benutzt werden.
+	Ein weiterer Vorteil dieser Abstraktion ist die Testbarkeit der App. Dadurch, dass im Click-Dummy feste Daten hinterlegt sind, kann man sich zum Testen der App verschiedene Fälle erzeugen, die einfach in den jeweiligen \lstinline{*DaoDummy}s benutzt werden. Ein Beispiel für Unit Tests finden Sie im Programmausdruck \ref{lst:Unittest} in Kapitel \ref{sec:QMAusblick}.
 	
 	Darüber hinaus erlaubt uns dieses Verfahren auch die erleichterte Austauschbarkeit einzelner Komponenten. Wenn man dieses Verfahren auf andere Funktionen der App anwendet, insbesondere dann, wenn benutzerspezifische Elemente erforderlich sind, so ist es schnell möglich, eine White-Label-App zu erzeugen. Das heißt also wir können eine App schaffen, die auf verschiedene Kunden zugeschnitten werden kann. Dies hat für unseren Kunden T-Systems MMS in seiner Eigenschaft als Vermarkter den Vorteil, ihre App leicht auf Endkunden anpassen zu können.
 	
